# robotic-arm-ros2

./: README.md
arm_control/: package.xml
arm_control/arm_control/: arm_controller.py
data/trajectories/: README.md
docs/: CALIBRATION_LOG.md
logs/calibration_20250110/: calibration_results.json
tests/: __init__.py  test_arm_control.py
